# olist-ecommerce-analytics

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: olist_daily_pipeline.py
lookml/: README.md  manifest.lkml  olist.model.lkml
lookml/views/: fct_delivery_performance.view.lkml  fct_orders.view.lkml  fct_rfm_segments.view.lkml
src/etl/: load_to_snowflake.py
src/etl/dbt_project/: dbt_project.yml
src/etl/dbt_project/macros/: cross_db_utils.sql
src/etl/dbt_project/models/marts/: dim_sellers_scd.sql  fct_customer_ltv.sql  fct_delivery_performance.sql  fct_orders.sql  fct_rfm_segments.sql  fct_seller_performance.sql  schema.yml
src/etl/dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql  stg_products.sql  stg_sellers.sql
src/etl/dbt_project/seeds/: schema.yml  seller_location_history.csv
